--- a/auth/docker-compose.yml
+++ b/auth/docker-compose.yml
@@ -2,8 +2,8 @@ services:
   auth:
     container_name: movies-auth
     build: src
-    ports:
-      - "8070:8001"
+    expose:
+      - 8001
     env_file:
       - src/.env
     command: bash -c "
