feat: Правит PYTHONPATH для make-команд миграций

--- a/auth/Makefile
+++ b/auth/Makefile
@@ -13,10 +13,10 @@ format:
 	poetry run ruff format src
 
 migrations:
-	poetry run alembic revision --autogenerate -m $(m)
+	PYTHONPATH=src poetry run alembic revision --autogenerate -m $(m)
 
 migrate:
-	poetry run alembic upgrade head
+	PYTHONPATH=src poetry run alembic upgrade head
 
 superuser:
 	python ./src/app/commands/createsuperuser.py
