--- a/billing/Makefile
+++ b/billing/Makefile
@@ -21,4 +21,8 @@ migrations:
 migrate:
 	PYTHONPATH=src poetry run alembic upgrade head
 
+build:
+	docker --log-level=debug build --progress=plain --pull --file=Dockerfile --tag=ghcr.io/nikolayshvets/movies-billing:1.1 .
+	docker push ghcr.io/nikolayshvets/movies-billing:1.1
+
 .DEFAULT_GOAL := up
