--- a/infrastructure/nginx/configs/site.conf
+++ b/infrastructure/nginx/configs/site.conf
@@ -4,6 +4,9 @@ upstream movies-auth {
 upstream movies-billing {
     server movies-billing:8002;
 }
+upstream movies-content {
+    server movies-content:8003;
+}
 
 server {
     listen       80 default_server;
@@ -17,6 +20,9 @@ server {
     }
     location /api/billing {
         proxy_pass http://movies-billing;
+    }
+    location /api/content {
+        proxy_pass http://movies-content;
     }
 
     error_page   404              /404.html;
