fix: исправлены замечания

--- a/content/.example.env
+++ b/content/.example.env
@@ -1,9 +1,13 @@
-# postgresql
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=movies-postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=content
 
-# api
+LOG_FILE_PATH=
+LOG_NAME
+
 SECRET_KEY=secret
+
+JWT_ALGORITHM=HS256
+AUTH_API_URL="http://movies-auth:8001/api/auth"
