--- a/content/docker-compose.yml
+++ b/content/docker-compose.yml
@@ -4,13 +4,10 @@ services:
     build: .
     expose:
       - 8003
-#    ports:
-#      - "8003:8003"
     env_file:
       - .env
     command: bash -c "
       alembic upgrade head &&
-      python src/content_db.py &&
       uvicorn src.main:app --host 0.0.0.0 --port 8003"
     volumes:
       - ./log:/var/log
@@ -36,4 +33,4 @@ services:
 networks:
   movies-network:
     name: movies-network
-#    external: true
+    external: true
