--- a/content/pyproject.toml
+++ b/content/pyproject.toml
@@ -4,23 +4,23 @@ version = "0.1.0"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
-sqlalchemy = "^2.0.36"
-pydantic = {extras = ["email"], version = "^2.10.2"}
+python = "~3.12"
+sqlalchemy = "~2.0.36"
+pydantic = {extras = ["email"], version = "~2.10.2"}
 pydantic-settings = "~2.6.1"
 alembic = "~1.14.0"
 fastapi = "~0.115.5"
 uvicorn = "~0.32.0"
 asyncpg = "~0.30.0"
 orjson = "~3.10.11"
-faker = "^33.0.0"
-httpx = "^0.27.2"
-tenacity = "^9.0.0"
-jwt = "^1.3.1"
+tenacity = "~9.0.0"
+pyjwt = "~2.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
-ruff = "0.7.4"
+ruff = "~0.7.4"
+faker = "~33.1.0"
+httpx = "~0.28.0"
 
 [build-system]
 requires = ["poetry-core"]
