--- a/notifications/pyproject.toml
+++ b/notifications/pyproject.toml
@@ -13,6 +13,7 @@ jinja2 = "~3.1.4"
 tenacity = "~9.0.0"
 asyncpg = "~0.30.0"
 pydantic = {extras = ["email"], version = "~2.10.1"}
+orjson = "~3.10.12"
 
 
 [tool.poetry.group.dev.dependencies]
