--- a/notifications/.example.env
+++ b/notifications/.example.env
@@ -1,17 +1,17 @@
 # postgresql
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=postgres
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=notifications
 
 # kafka
-KAFKA_TOPICS=notifications,error_notifications
-KAFKA_BOOTSTRAP_SERVERS=kafka:9094
+KAFKA_TOPICS=["user_registered","user_logged_in"]
+KAFKA_BOOTSTRAP_SERVERS=["localhost:9094"]
 KAFKA_GROUP_ID=notifications
 
 # SMTP
-SMTP_HOST=
-SMTP_PORT=
+SMTP_HOST=smtp.yandex.com
+SMTP_PORT=465
 SMTP_USER=
 SMTP_PASSWORD=
