--- a/content/.example.env
+++ b/content/.example.env
@@ -1,13 +1,14 @@
+# postgresql
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=movies-postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=content
 
-LOG_FILE_PATH=
-LOG_NAME
+# cors
+ORIGINS=http://localhost:8000
 
-SECRET_KEY=secret
-
+# jwt
 JWT_ALGORITHM=HS256
-AUTH_API_URL="http://movies-auth:8001/api/auth"
+AUTH_API_URL=http://movies-auth:8001/api/auth
+SECRET_KEY=secret
