--- a/content/.example.env
+++ b/content/.example.env
@@ -5,10 +5,6 @@ POSTGRES_HOST=movies-postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=content
 
-# cors
-ORIGINS=http://localhost:8000
-
-# jwt
-JWT_ALGORITHM=HS256
-AUTH_API_URL=http://movies-auth:8001/api/auth
+# api
 SECRET_KEY=secret
+AUTH_API_URL=http://127.0.0.1:8000
