--- a/auth/.example.env
+++ b/auth/.example.env
@@ -10,11 +10,9 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
 
-# cors
-ORIGINS=http://localhost:8000
-
 # api
 SECRET_KEY=secret
+ORIGINS=["http://127.0.0.1:8000","http://127.0.0.1:8002","http://127.0.0.1:8003"]
 
 # oauth
 GOOGLE_OAUTH_CLIENT_ID=
