--- a/content/Makefile
+++ b/content/Makefile
@@ -1,7 +1,4 @@
-.PHONY: help up down check format
-
-help:
-	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort -d | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
+.PHONY: up down check format migration migrations migrate filldb build
 
 up:
 	docker compose up -d --build
@@ -15,14 +12,20 @@ check:
 format:
 	poetry run ruff format src
 
+migration:
+	PYTHONPATH=src poetry run alembic revision -m $(m)
+
 migrations:
-	poetry run alembic revision --autogenerate -m $(m)
+	PYTHONPATH=src poetry run alembic revision --autogenerate -m $(m)
 
 migrate:
-	poetry run alembic upgrade head
+	PYTHONPATH=src poetry run alembic upgrade head
 
 filldb:
-	python ./src/commands/fill_database.py
+	PYTHONPATH=src python src/commands/fill_database.py
 
+build:
+	docker --log-level=debug build --progress=plain --pull --file=Dockerfile --tag=ghcr.io/nikolayshvets/movies-auth:1.1 .
+	docker push ghcr.io/nikolayshvets/movies-auth:1.1
 
-.DEFAULT_GOAL := up
+.DEFAULT_GOAL := build
