--- a/infrastructure/nginx/configs/site.conf
+++ b/infrastructure/nginx/configs/site.conf
@@ -15,13 +15,13 @@ server {
 
     root /data;
 
-    location /api/auth {
+    location /auth/api {
         proxy_pass http://movies-auth;
     }
-    location /api/billing {
+    location /billing/api {
         proxy_pass http://movies-billing;
     }
-    location /api/content {
+    location /content/api {
         proxy_pass http://movies-content;
     }
 
