--- a/auth/pyproject.toml
+++ b/auth/pyproject.toml
@@ -13,6 +13,7 @@ pydantic-settings = "~2.6.1"
 asyncpg = "~0.30.0"
 fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "~14.0.0"}
 orjson = "~3.10.11"
+sqladmin = {extras = ["full"], version = "~0.20.1"}
 alembic = "~1.14.0"
 
 
