--- a/auth/.example.env
+++ b/auth/.example.env
@@ -1,12 +1,12 @@
 # postgresql
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=auth
 
 # redis
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
 
@@ -15,5 +15,5 @@ SECRET_KEY=secret
 ORIGINS=["http://127.0.0.1:8000","http://127.0.0.1:8002","http://127.0.0.1:8003"]
 
 # oauth
-GOOGLE_OAUTH_CLIENT_ID=
-GOOGLE_OAUTH_CLIENT_SECRET=
+GOOGLE_OAUTH_CLIENT_ID=75666645928-j0g8a6uo6rhgciqim9r3em731rsnbel3.apps.googleusercontent.com
+GOOGLE_OAUTH_CLIENT_SECRET=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
