--- a/content/.example.env
+++ b/content/.example.env
@@ -1,7 +1,7 @@
 # postgresql
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=content
 
