feat: добавлена авторизация для алминки

--- a/infrastructure/nginx/configs/site.conf
+++ b/infrastructure/nginx/configs/site.conf
@@ -1,9 +1,9 @@
 upstream movies-auth {
     server movies-auth:8001;
 }
-# upstream movies-billing {
-#     server movies-billing:8002;
-# }
+upstream movies-billing {
+    server movies-billing:8002;
+}
 upstream movies-content {
     server movies-content:8003;
 }
@@ -18,9 +18,9 @@ server {
     location /auth/api {
         proxy_pass http://movies-auth;
     }
-    # location /billing/api {
-    #     proxy_pass http://movies-billing;
-    # }
+    location /billing/api {
+        proxy_pass http://movies-billing;
+    }
     location /content/api {
         proxy_pass http://movies-content;
     }
