--- a/billing/.example.env
+++ b/billing/.example.env
@@ -6,9 +6,17 @@ POSTGRES_PORT=5432
 POSTGRES_DB=billing
 
 # api
+EXTERNAL_LOGIN_URL=http://127.0.0.1:8000/auth/api/v1/jwt/login
+AUTH_API_URL=http://auth:8001
+
+# jwt
 SECRET_KEY=secret
+ALGORITHM=HS256
+AUD=fastapi-users:auth
 
 #YooKassa
 ACCOUNT_ID=
 KASSA_SECRET_KEY=
 
+# logger
+LOG_FILE_PATH=/log/.log
