--- a/billing/docker-compose.yml
+++ b/billing/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   billing:
     container_name: movies-billing
-    image: ghcr.io/nikolayshvets/movies-billing:1.1
+    build: .
     expose: 
       - 8002
     env_file:
