feat: Добавление kafka producer.

--- a/auth/.example.env
+++ b/auth/.example.env
@@ -10,6 +10,11 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
 
+#kafka
+KAFKA_TOPICS=["user_registered","user_logged_in"]
+KAFKA_BOOTSTRAP_SERVERS=["movies-kafka:9094"]
+KAFKA_GROUP_ID=notifications
+
 # api
 SECRET_KEY=secret
 ORIGINS=["http://127.0.0.1:8000","http://127.0.0.1:8002","http://127.0.0.1:8003"]
