--- a/auth/pyproject.toml
+++ b/auth/pyproject.toml
@@ -11,9 +11,11 @@ redis = "~5.2.0"
 pydantic = "~2.9.2"
 pydantic-settings = "~2.6.1"
 asyncpg = "~0.30.0"
-fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "~14.0.0"}
+fastapi-users = { extras = ["oauth", "sqlalchemy"], version = "~14.0.0" }
 orjson = "~3.10.11"
 alembic = "~1.14.0"
+aiokafka = "~0.12.0"
+
 
 
 [build-system]
@@ -61,19 +63,19 @@ target-version = "py312"  # Целевая версия Python
 # Настройки линтинга
 select = [
     # Выбор правил линтинга
-    "E",  # pycodestyle
-    "F",  # Pyflakes
+    "E", # pycodestyle
+    "F", # Pyflakes
     "UP", # pyupgrade
-    "B",  # flake8-bugbear
+    "B", # flake8-bugbear
     "SIM", # flake8-simplify
-    "I",  # isort
+    "I", # isort
 ]
 
 ignore = []  # Игнорируемые правила
 allowed-confusables = [
     # Разрешенные похожие символы для русского алфавита
-    "у", "е", "г", "х", "а", "р", "о", "с", "б", 
-    "У", "К", "Е", "Н", "З", "Х", "В", "А", "Р", 
+    "у", "е", "г", "х", "а", "р", "о", "с", "б",
+    "У", "К", "Е", "Н", "З", "Х", "В", "А", "Р",
     "О", "С", "М", "Т", "Ь"
 ]
 fixable = ["ALL"]  # Все ошибки можно исправить
