--- a/content/pyproject.toml
+++ b/content/pyproject.toml
@@ -15,6 +15,7 @@ orjson = "~3.10.11"
 tenacity = "~9.0.0"
 pyjwt = "~2.8.0"
 alembic = "~1.14.0"
+sqladmin = {extras = ["full"], version = "^0.20.1"}
 
 
 [tool.poetry.group.dev.dependencies]
