fix: поправила .example.env, nginx/configs/site.conf

--- a/content/.example.env
+++ b/content/.example.env
@@ -6,7 +6,7 @@ POSTGRES_PORT=5432
 POSTGRES_DB=content
 
 # api
-EXTERNAL_LOGIN_URL=http://127.0.0.1:8000/auth/api/v1/jwt/login
+EXTERNAL_LOGIN_URL=http://localhost:8000/auth/api/v1/jwt/login
 AUTH_API_URL=http://auth:8001
 
 # jwt
