fix: поправила порт в infrastructure/docker-compose.yml

--- a/infrastructure/nginx/configs/site.conf
+++ b/infrastructure/nginx/configs/site.conf
@@ -21,8 +21,8 @@ server {
     location /billing/api {
         proxy_pass http://movies-billing;
     }
-    location /content/api {
-        proxy_pass http://movies-content;
+    location /content/ {
+        proxy_pass http://movies-content/;
     }
 
     error_page   404              /404.html;
