feat: Доработки по биллингу

--- a/auth/Makefile
+++ b/auth/Makefile
@@ -35,4 +35,4 @@ build:
 	docker --log-level=debug build --progress=plain --pull --file=Dockerfile --tag=ghcr.io/nikolayshvets/movies-auth:1.1 .
 	docker push ghcr.io/nikolayshvets/movies-auth:1.1
 
-.DEFAULT_GOAL := build
+.DEFAULT_GOAL := up
