--- a/billing/Makefile
+++ b/billing/Makefile
@@ -1,8 +1,5 @@
 .PHONY: help up down check format
 
-help:
-	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort -d | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
-
 up:
 	docker compose up -d --build
 
@@ -14,6 +11,9 @@ check:
 
 format:
 	poetry run ruff format src
+
+migration:
+	PYTHONPATH=src poetry run alembic revision -m $(m)
 
 migrations:
 	PYTHONPATH=src poetry run alembic revision --autogenerate -m $(m)
