--- a/billing/pyproject.toml
+++ b/billing/pyproject.toml
@@ -5,7 +5,6 @@ package-mode = false
 [tool.poetry.dependencies]
 python = "~3.12"
 sqlalchemy = "~2.0.36"
-pydantic = "~2.9.2"
 pydantic-settings = "~2.6.1"
 alembic = "~1.14.0"
 fastapi = "~0.115.5"
@@ -13,6 +12,10 @@ uvicorn = "~0.32.0"
 asyncpg = "~0.30.0"
 orjson = "~3.10.11"
 yookassa = "~3.4.1"
+pyjwt = "~2.10.1"
+pydantic = {extras = ["email"], version = "~2.10.3"}
+httpx = "~0.28.1"
+tenacity = "~9.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
