feat: Добавляет клиент к сервису биллинга в сервисе контента

--- a/content/.example.env
+++ b/content/.example.env
@@ -8,6 +8,7 @@ POSTGRES_DB=content
 # api
 EXTERNAL_LOGIN_URL=http://127.0.0.1:8000/auth/api/v1/jwt/login
 AUTH_API_URL=http://auth:8001
+BILLING_API_URL=http://billing:8002
 
 # jwt
 SECRET_KEY=secret
