--- a/billing/pyproject.toml
+++ b/billing/pyproject.toml
@@ -16,6 +16,7 @@ pyjwt = "~2.10.1"
 pydantic = {extras = ["email"], version = "~2.10.3"}
 httpx = "~0.28.1"
 tenacity = "~9.0.0"
+aiokafka = "~0.12.0"
 
 
 [tool.poetry.group.dev.dependencies]
