--- a/notifications/.example.env
+++ b/notifications/.example.env
@@ -6,7 +6,7 @@ POSTGRES_PORT=5432
 POSTGRES_DB=notifications
 
 # kafka
-KAFKA_TOPICS=["user_registered","user_logged_in"]
+KAFKA_TOPICS=["user_registered","user_logged_in","subscription_paid","subscription_canceled","subscription_refunded"]
 KAFKA_BOOTSTRAP_SERVERS=["localhost:9094"]
 KAFKA_GROUP_ID=notifications
 
